--- a/calc.html
+++ b/calc.html
@@ -10,11 +10,7 @@
 <style>
   body{
       background-color:#091921;
-     display: flex;
-     align-items: center ;
-     justify-content: center;
-     user-select: none;
-     user-zoom: none;
+      overflow: hidden;
     }
 
   .main{
@@ -24,10 +20,12 @@
     -webkit-backdrop-filter: blur(20px);
             backdrop-filter: blur(20px);
     border-radius: 6px;
+    display: flex;
     align-items: center;
-    margin: 50px;
     min-width: 200px;
-    box-shadow: 5px 5px 30px rgba(0,0,0,10.5) ;
+    filter: drop-shadow(-3px -3px 2px rgba(255,255,255,0.5))
+            drop-shadow(5px 5px 5px rgba(0,0,0,0.5))
+            drop-shadow(15px 15px 15px rgba(0,0,0,0.5));
     z-index: 10;
     filter: blur(0.5px);   
     }
@@ -69,9 +67,25 @@ button:hover{
  .h1{
   color:white;
    font-family: 'Style Script', cursive;
+   margin-left: 489px;
+   margin-top: 25px;
+ }
+ .con{
+   display: flex;
+   justify-content: center;
+ }
+ .night{
+   color: white;
+    font-size:30px ;
+    cursor: pointer;
+    transition: 3s;
+ }
+ .night:hover{
+   color: white;
+   transition: 3s ;
  }
 /* Night mode css */
- /*  .light{
+  .light{
    background-color: white;
    transition: 3s;
  }
@@ -80,32 +94,28 @@ button:hover{
   background-color: rgb(0, 0, 0);
   transition: 3s ;
  }
- .night{
-   color: white;
-    font-size:30px ;
-    cursor: pointer;
-    transition: 3s;
-    padding:100px;
- }
 
  .h1-dark{
   color: black;
   transition: 3s ;
  }
- .night:hover{
-   color: white;
-   transition: 3s ;
- }
+ 
  .rotate{
    transform: rotate(180deg);
    transition: 3s ;
- } */
+ }
+ @media screen and (max-width: 480px){
+ body{
+    overflow:hidden;
+    overflow:hidden;
+ }
+}
 </style>
 <body>
  <!-- night mode icon  -->
-  <!-- <nav><a class="night"><i class="fas fa-sun"></i></a></nav> -->
-   <h1 class="h1">Made by Subojeet With ❤️</h1>
+   <nav><a class="night"><i class="fas fa-sun"></i></a></nav> 
    
+   <div class="con">
      <div class="main">
        <form name="formCalci">
         <input type="" readonly name="answer" id="answers">
@@ -136,6 +146,8 @@ button:hover{
          <button onclick="formCalci.answers.value = eval(formCalci.answers.value) " type="button">=</button>
     </form>
  </div>
+</div>
+<h3 class="h1">Made by Subojeet With ❤️</h3>
  <script src="tilt.jquery.js"></script>
  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -146,23 +158,19 @@ button:hover{
 		max: 25,
 		speed: 400
 	});
-	VanillaTilt.init(document.querySelector(".h1"), {
-		max: 25,
-		speed: 800
-	});
   
   $(document).ready(function () {
   /* Clear func */     $('#clear').click(function () { 
         $('#answers').val("");
        });
   /*   jquery night mode */
-       /*  $('.night').click(function() { 
+         $('.night').click(function() { 
       $('body').toggleClass('light').css({"transition":"2s" });
        $('.main').toggleClass('pain').css({"transition":"2s" });
        $('.h1').toggleClass('h1-dark').css({"transition":"2s" });
        $('.fas').toggleClass('h1-dark').css({"transition":"2s" });
-       $(this).toggleClass('rotate').css({"transition":"2s" });
-      });  */
+       $('.night').toggleClass('rotate').css({"transition":"2s" });
+      });  
     });
  
  </script>
